app/src/db/repositories/wort_gender/snapshots/anki_sentences__db__repositories__worte_gender__worte_gender_test__test_worte_gender_repo__bulk_upsert__after_update.snap
---
source: app/src/db/repositories/worte_gender/worte_gender_test.rs
expression: res_2.snapshot()
---
[
    WorteGenderSnapshot {
        id: 0,
        gender: "Maskuline test",
        artikel: "der test",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    WorteGenderSnapshot {
        id: 1,
        gender: "Femenin test",
        artikel: "die test",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    WorteGenderSnapshot {
        id: 2,
        gender: "Neutrum test",
        artikel: "das test",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
